Name:                MonadRandom-tf
Build-type:          Simple
Version:             0.0.0
Synopsis:            Random-number generation monad.
Description:         Support for computations which consume random values, using type families.
License:             OtherLicense
License-file:        LICENSE
Category:            Control
Author:              Cale Gibbard and others
Maintainer:          
Stability:           experimental
Build-Depends:       base >=2 && < 5, monads-tf, random
Exposed-modules:     Control.Monad.Random.Class, Control.Monad.Random
